--- a/notebooks/m2-regression.ipynb
+++ b/notebooks/m2-regression.ipynb
@@ -437,6 +437,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linear Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -467,6 +474,13 @@
     "perf_df = print_metrics(y_test, yhat, \"LinearRegression\", perf_df)\n",
     "del model\n",
     "del yhat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#  Lasso"
    ]
   },
   {
@@ -511,6 +525,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ridge"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
@@ -551,6 +572,13 @@
     "perf_df = print_metrics(y_test, yhat, \"Ridge_GridSearch\", perf_df)\n",
     "del ridge_model\n",
     "del yhat\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DecisionTreeRegressor with hyper parameter"
    ]
   },
   {
@@ -599,6 +627,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DecisionTreeRegressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -629,6 +664,13 @@
     "perf_df = print_metrics(y_test, yhat, \"DecisionTreeRegressor\", perf_df)\n",
     "del model\n",
     "del yhat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GradientBoosting with GridSearch"
    ]
   },
   {
@@ -681,6 +723,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GradientBoosting"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
@@ -711,6 +760,13 @@
     "perf_df = print_metrics(y_test, yhat, \"GradientBoostingRegressor\", perf_df)\n",
     "del model\n",
     "del yhat"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RandomForestRegressor with RandomizedSearch"
    ]
   },
   {
@@ -758,6 +814,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RandomForestRegressor"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "metadata": {},
@@ -794,7 +857,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ExtraTreesRegressor"
+    "# ExtraTreesRegressor"
    ]
   },
   {
@@ -828,6 +891,13 @@
     "perf_df = print_metrics(y_test, yhat, \"ExtraTreesRegressor\", perf_df)\n",
     "del model\n",
     "del yhat\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# XGBoost Regressor"
    ]
   },
   {
@@ -1036,11 +1106,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<b>R2 (R-squared):</b>\n",
+    "\n",
+    "- R-squared is a statistical measure of how close the data points are to the fitted regression line.\n",
+    "- It is a proportion of the variance in the dependent variable that is predictable from the independent variables.\n",
+    "- R-squared values range from 0 to 1, where 0 indicates that the model does not explain any variability, and 1 indicates perfect explanation.\n",
+    "- Higher R-squared values are generally desirable, but a high R-squared does not necessarily mean that the model is good; it depends on the context and the goals of the analysis.\n",
+    "\n",
+    "<b>MSE (Mean Squared Error):</b>\n",
+    "\n",
+    "- MSE is a measure of the average squared difference between actual and predicted values.\n",
+    "- It is calculated by taking the average of the squared differences between the actual and predicted values for each data point.\n",
+    "- MSE penalizes larger errors more heavily than smaller errors due to the squaring operation.\n",
+    "- Lower MSE values indicate better model performance.\n",
+    "\n",
+    "<b>MAE (Mean Absolute Error):</b>\n",
+    "\n",
+    "- MAE is a measure of the average absolute difference between actual and predicted values.\n",
+    "- It is calculated by taking the average of the absolute differences between the actual and predicted values for each data point.\n",
+    "- MAE is less sensitive to outliers compared to MSE because it does not involve squaring.\n",
+    "- Like MSE, lower MAE values indicate better model performance.\n",
+    "\n",
+    "<b>RMSE (Root Mean Squared Error):</b>\n",
+    "\n",
+    "- RMSE is the square root of the MSE and represents the standard deviation of the residuals.\n",
+    "- It provides a measure of the average magnitude of the errors in the predictions.\n",
+    "- Like MSE, RMSE penalizes larger errors more heavily, but it has the advantage of being in the same units as the dependent variable.\n",
+    "- As with MSE, lower RMSE values indicate better model performance."
+   ]
   }
  ],
  "metadata": {
