--- a/notebooks/m1-classification.ipynb
+++ b/notebooks/m1-classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +10,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "\n",
-    "\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pickle\n",
@@ -24,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +31,7 @@
        "(538040, 37)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +63,7 @@
        "Name: CRSDepTime, Length: 538040, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +92,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +130,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,13 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "for col in df.columns:\n",
     "    if df[col].isna().sum()>0:\n",
     "        print(col)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Replace LabelEncoder with inbuilt Encoding"
    ]
   },
   {
